assets/css/custom.css
body {
	overflow-x: hidden;
}

.img-logo{
width: 4em;
}
iframe{
	width: 100%;
}
.uk-navbar .uk-drop {
	width: 250px
}

@media (min-width: 1200px) {
	.large-dropdown-section {
		min-width: 425px;
	}
}
@media (max-width: 1199px){
	.large-dropdown-section {
		min-width: 380px;
	}
}



@media (max-width: 320px) {
	.large-dropdown-section {
		min-width: 288px;
	}
}
.large-dropdown-section {
	transition: all 0.2s ease-in-out;
}
.scrollup-button {
	width: 60px; /* Fixed width */
	height: 60px; /* Fixed height */
	border-radius: 50%; /* Makes it perfectly circular */
	background-color: #0d9488;
	color: #fff;
	display: flex;
	align-items: center; /* Centers content vertically */
	justify-content: center; /* Centers content horizontally */
	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Optional: Adds a nice shadow */
	cursor: pointer; /* Makes it look like a button */
    right: 50px;
    bottom: 50px;
    z-index: 5;
}
.scrollup-button:hover {
    transition: all 0.2s ease-in-out;
	color: black !important;
    background-color: #266467;
}
.scrollup-button:focus {
	color: black !important;
}
.embed-container {
	width: 100%;
	display: flex;
	height: 380px;
}
.search-query {
	right: auto !important;
}

.uk-background-secondary {
	background-color: #266467 !important;
}

.footer-logo {
	width: 25%
}

.title-section {
	order: 1;
}
.image-section {
	order: 2;
}

@media (max-width: 1440px) {
	.responsive-content{
		display: flex;
		flex-direction: column;
	}
	.title-section {
		order: 2;
	}
	.image-section {
		order: 1;
	}
}
.rounded {
	border-radius: 25px;
}
.social-card {
	background-color: #0d9488;
}
.social-block {
	padding-top: 0;
}
.slider-nav-circle {
  height: 40px; /* Height equal to width for a circle */
  border-radius: 50%; /* Make the shape circular */
  background-color: #0d9488; /* Background color for the circle */
  border: none; /* Remove the border */
  text-align: center; /* Center text/icon horizontally */
  line-height: 40px; /* Match the line-height to the height to center vertically */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add some depth with shadow */
  color: #fff; /* Color for the arrow icon */
  cursor: pointer; /* Change cursor to pointer */
  padding-right: 18px;
  padding-left: 20px;
}

.slider-nav-circle:hover {
  background-color: #266467; /* Slightly darker on hover */
  transform: scale(1.1); /* Scale up slightly on hover */
}

.slider-nav-circle:focus {
  outline: none; /* Remove focus outline */
  box-shadow: 0 0 6px #266467; /* Add a focus shadow */
}

.social-site-title {
	margin-top: 135px;
}

/*Start Search Bar Area*/

@media (min-width: 1400px){
    .nav-search-bar {
        width: 62em !important;
    }
    .hope-logo {
        max-height: 200px;
    }
}
@media (min-width: 1024px) and (max-width: 1399px){
    .nav-search-bar {
        width: 46em !important;
    }
    .hope-logo {
        max-height: 180px;
    }
}
@media (min-width: 768px) and (max-width: 1023px){
    .nav-search-bar {
        width: 37em !important;
    }
    .hope-logo {
        max-height: 215px;
    }
}
@media (min-width: 425px) and (max-width: 767px){
    .nav-search-bar {
        width: 18em !important;
    }
    .hope-logo {
        max-height: 180px;
    }
}
@media (min-width: 375px) and (max-width: 424px){
    .nav-search-bar {
        width: 15em !important;
    }
    .hope-logo {
        max-height: 125px;
    }
}
@media (max-width: 320px) {
    .nav-search-bar {
        width: 12em !important;
    }
    .hope-logo {
        max-height: 100px;
    }
    /*    .scrollup-button {*/
    /*    width: 60px; !* Fixed width *!*/
    /*    height: 60px; !* Fixed height *!*/
    /*        */
    /*    border-radius: 50%; !* Makes it perfectly circular *!*/
    /*    background-color: #0d9488;*/
    /*    color: #fff;*/
    /*    display: flex;*/
    /*    align-items: center; !* Centers content vertically *!*/
    /*    justify-content: center; !* Centers content horizontally *!*/
    /*    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); !* Optional: Adds a nice shadow *!*/
    /*    cursor: pointer; !* Makes it look like a button *!*/
    /*    right: 50px;*/
    /*    bottom: 50px;*/
    /*}*/

}

.uk-search-background {
    background-color: #effbfa !important;
}

/*End Search Bar Area*/

@media (max-width: 1440px) {
    .index-hero-image {
        padding: 0 !important;
    }
}
@media (min-width: 1024px) {
    .index-hero-image-actual {
        height: 600px !important;
    }
}
.icons {
    color: #266467 !important;
}
.icons:hover {
    color: #121212 !important;
}
.favorites-tabs {
    background-color: #98CEB3 !important;
}
/*98CEB3*/
.favorites-icons {
    color: #121212 !important;
    height: 45px !important;
    width: 45px !important;
}

